[gd_scene load_steps=3 format=3 uid="uid://commandrow"]

[ext_resource type="Script" path="res://modules/command_ui/command_row.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.1, 0.1, 0.15, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CommandRow" type="PanelContainer"]
offset_right = 400.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="CommandName" type="Label" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "COMMAND_NAME"
theme_override_font_sizes/font_size = 18

[node name="ExecuteButton" type="Button" parent="VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = " Execute "

[node name="ParamContainer" type="VBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5
